[gd_scene load_steps=4 format=3 uid="uid://c77qp4eia3sk6"]

[ext_resource type="Script" uid="uid://bbx4ja0j81dka" path="res://scenes/GUI/game_main/topbar/gui_enemy_forecast_bar.gd" id="1_qpsey"]
[ext_resource type="PackedScene" uid="uid://x84lf0x1m7n1" path="res://scenes/GUI/game_main/topbar/gui_enemy_icon_button.tscn" id="2_c1xtu"]
[ext_resource type="Texture2D" uid="uid://bbjjbw8ypwede" path="res://resources/sprites/GUI/icons/other_icons/current_enemy_marker.png" id="2_ojeu5"]

[node name="GUIEnemyForecastBar" type="PanelContainer"]
offset_right = 38.0
offset_bottom = 12.0
script = ExtResource("1_qpsey")

[node name="MarkerContainer" type="Control" parent="."]
layout_mode = 2

[node name="Marker" type="TextureRect" parent="MarkerContainer"]
unique_name_in_owner = true
layout_mode = 1
offset_left = 4.0
offset_right = 8.0
offset_bottom = 4.0
texture = ExtResource("2_ojeu5")
expand_mode = 1
stretch_mode = 5

[node name="EnemyContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 1

[node name="GUIEnemyIconButton" parent="EnemyContainer" instance=ExtResource("2_c1xtu")]
layout_mode = 2

[node name="GUIEnemyIconButton2" parent="EnemyContainer" instance=ExtResource("2_c1xtu")]
layout_mode = 2

[node name="GUIEnemyIconButton3" parent="EnemyContainer" instance=ExtResource("2_c1xtu")]
layout_mode = 2
